--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
         <script src="mootools.noisy.min.js" type="text/javascript"></script>
         <script src="FunForms.js" type="text/javascript"></script>
+        <script src="MooDialog.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" href="FunForms.css" />
         <script src="builder.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" href="builder.css" />
