--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ dvcs_function="
             noBranch=\"\"
             if [ -z \"\$gitBranch\" ]; then
                 # :git-bisect
-                    bisect=\$(git rev-list --bisect 2> /devnull | cut -c1-7)
+                    bisect=\$(git rev-list --bisect 2> /dev/null | cut -c1-7)
                     if [ -z \"\$bisect\" ]; then
                 # /git-bisect
                 noBranch=True
@@ -362,7 +362,7 @@ dvcs_function="
                 prompt=\$prompt\$prefix\${gitBranch#refs/heads/}\$bisecting
             # /git-branch
             # :git-revno
-                revNo=\$(git rev-parse HEAD | cut -c1-7) || return
+                revNo=\$(git rev-parse HEAD 2> /dev/null | cut -c1-7) || return
 
                 # If bisecting don't output revno
                 if [ -z \"\$bisecting\" ] && [ -z \"\$noBranch\" ];then
